# apex-ecs

./: $null  .gitignore  Apex_ECS_Руководство_пользователя.docx  Apex_ECS_Руководство_пользователя.md  Cargo.toml  generate_context.bat  results.txt
crates/apex-bench/: Cargo.toml
crates/apex-bench/benches/: benchmark.rs  benchmarks.rs  comparison.rs  graph_bench.rs  specialized.rs
crates/apex-bench/src/: add_remove.rs  commands_bench.rs  fragmented_iter.rs  lib.rs  relations_bench.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/apex-bench/src/apex/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/apex-core/: Cargo.toml
crates/apex-core/src/: access.rs  archetype.rs  commands.rs  component.rs  entity.rs  events.rs  lib.rs  par_utils.rs  query.rs  relations.rs  resources.rs  sub_world.rs  system_param.rs  template.rs  transform.rs  world.rs
crates/apex-core/src/storage/: mod.rs  sparse_set.rs
crates/apex-examples/: Cargo.toml
crates/apex-examples/examples/: basic.rs  hot_reload_test.rs  perf.rs  prefab_isolated.rs  scripting.rs  serialization_hot_reload.rs  transform_example.rs
crates/apex-graph/: Cargo.toml
crates/apex-graph/src/: algorithms.rs  lib.rs
crates/apex-hot-reload/: Cargo.toml
crates/apex-hot-reload/src/: asset_registry.rs  lib.rs  plugin.rs  prefab_plugin.rs  watcher.rs
crates/apex-isolated/: Cargo.toml
crates/apex-isolated/src/: lib.rs
crates/apex-macros/: Cargo.toml
crates/apex-macros/src/: lib.rs
crates/apex-scheduler/: Cargo.toml
crates/apex-scheduler/src/: lib.rs  stage.rs
crates/apex-scripting/: Cargo.toml  README_SCRIPTING.md
crates/apex-scripting/src/: context.rs  error.rs  field.rs  iterators.rs  lib.rs  registrar.rs  rhai_api.rs  script_engine.rs
crates/apex-serialization/: Cargo.toml
crates/apex-serialization/src/: lib.rs  prefab.rs  serializer.rs  snapshot.rs
examples/: basic.rs
plans/: apex_bench_rewrite_plan.md  api_simplification.md  api_simplification_review.md  api_uniformity_plan.md  benchmark_analysis_plan.md  comparison_with_top_ecs.md  diagnose_parallelism_v3.md  doc_update_plan.md  doc_update_v2_plan.md  feature_5_analysis.md  feature_5_plan.md  feature_plan.md  fix_resources_events_issues.md  next_step_plan.md  optimize_parallelism_v2.md  optimize_parallelism_v3.md  optimize_perf_plan.md  rhai_hashmap_vec_enum_plan.md  subworld_architecture.md  update_user_guide_plan.md
