[workspace]
resolver = "2"
members = [
    "crates/apex-core",
    "crates/apex-graph",
    "crates/apex-scheduler",
    "crates/apex-serialization",
    "crates/apex-hot-reload",
    "crates/apex-examples",
    "crates/apex-bench",
    "crates/apex-macros",
    "crates/apex-scripting",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["You"]
license = "MIT"

[workspace.dependencies]
# Хэширование
rustc-hash = "1.1"

# Маленькие vec на стеке
smallvec = { version = "1.11", features = ["union"] }

# Arena allocation
thunderdome = "0.6"

# Битовые множества
bitvec = "1.0"

# Параллелизм
rayon = "1.8"

# Логирование
log = "0.4"

# Ошибки
thiserror = "1.0"

# Сериализация
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.3"

# Математика для трансформаций
glam = { version = "0.29", features = ["serde"] }

# Скриптинг — однопоточный Rhai (без "sync" feature, используем Rc<RefCell>)
rhai = { version = "1.19", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1