[package]
name = "apex-bench"
version.workspace = true
edition.workspace = true

[features]
default = ["apex"]
apex = []
bevy = ["dep:bevy_ecs"]
legion = ["dep:legion"]

[dependencies]
cgmath = "0.18"
rayon = "1.4"

# Apex ECS
apex-core = { path = "../apex-core" }
apex-scheduler = { path = "../apex-scheduler" }

# ECS under test
bevy_ecs = { version = "0.1", optional = true }
legion = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
