[package]
name = "apex-examples"
version.workspace = true
edition.workspace = true

[dependencies]
apex-core          = { path = "../apex-core" }
apex-graph         = { path = "../apex-graph" }
apex-scheduler     = { path = "../apex-scheduler" }
apex-serialization = { path = "../apex-serialization" }
apex-hot-reload    = { path = "../apex-hot-reload" }
apex-isolated      = { path = "../apex-isolated" }
apex-scripting     = { path = "../apex-scripting" }
apex-macros        = { path = "../apex-macros" }
crossbeam-channel  = { workspace = true }
rhai               = { workspace = true }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
glam               = { workspace = true }
log                = { workspace = true }
env_logger         = "0.11"
rayon = { workspace = true, optional = true }

[features]
default  = []
parallel = ["dep:rayon", "apex-core/parallel", "apex-scheduler/parallel"]
