[package]
name = "apex-scheduler"
version.workspace = true
edition.workspace = true

[features]
default = []
# Включить параллельное выполнение систем через rayon.
# Требует что apex-core скомпилирован с feature "parallel".
parallel = ["dep:rayon", "apex-core/parallel"]

[dependencies]
apex-core = { path = "../apex-core" }
apex-graph = { path = "../apex-graph" }

thunderdome.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true
log.workspace = true
rayon = { workspace = true, optional = true }