[package]
name = "apex-scheduler"
version.workspace = true
edition.workspace = true

[features]
default  = []
parallel = ["dep:rayon", "apex-core/parallel"]

[dependencies]
apex-core  = { path = "../apex-core" }
apex-graph = { path = "../apex-graph" }

thunderdome.workspace = true
rustc-hash.workspace  = true
smallvec.workspace    = true
thiserror.workspace   = true
log.workspace         = true
rayon = { workspace = true, optional = true }