[package]
name = "apex-scripting"
version.workspace = true
edition.workspace = true

[dependencies]
apex-core   = { path = "../apex-core" }
apex-macros = { path = "../apex-macros" }

rhai.workspace    = true
log.workspace     = true
rustc-hash.workspace = true
thiserror.workspace  = true
notify = "6.1"