[package]
name = "apex-serialization"
version.workspace = true
edition.workspace = true

[dependencies]
apex-core  = { path = "../apex-core" }

serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
rustc-hash.workspace = true
thiserror.workspace  = true
log.workspace        = true